# rust-problem-solving

./: .devcontainer.json  .gitignore  .gitmodules  .gitpod.yml  Cargo.toml  Dockerfile  README.md
.space/: devfile.yaml
aoc/aoc2016/: Cargo.toml
aoc/aoc2016/src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  lib.rs
aoc2016/src/: day2.rs  day6.rs  day7.rs  day8.rs  lib.rs
aoc2021/: Cargo.toml
aoc2021/src/: day1.rs  day2.rs  lib.rs
cargo-boj2/: Cargo.toml
cargo-boj2/src/: main.rs
cargo-oj/: Cargo.toml  README.md  rust-toolchain.toml
cargo-oj/src/: main.rs
competitive/: Cargo.toml  int.sh  reset.sh  run.sh  test.sh
competitive/src/: lib.rs
competitive/src/competelib/: berlekamp_massey.rs  fft.rs  float_sort.rs  flow.rs  gcd_egcd_crt.rs  graph_misc.rs  lca.rs  mod.rs  ntheory.rs  prime.rs  random.rs  scc_2sat.rs  segtree.rs  sequence.rs  sequence_faster.rs  shortest_path.rs  trie.rs
competitive/tests/: test.rs
ps/: .bojrc  Cargo.toml  boj.toml  go.sh  input.txt  run.sh  sus.sh  test.sh
ps/golf/: gogs.sh  golfscript.rb  gopy.sh  gopypy.sh  main.gs  main.py
ps/src/: fft.rs  flow.rs  geometry.rs  graph.rs  io.rs  lca.rs  lib.rs  ntheory.rs  prime.rs  random.rs  segtree.rs  sequence.rs  string.rs
ps/src/prime/: factorizer.rs
