[package]
name = "cargo-oj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full", "parsing", "printing", "extra-traits", "visit-mut", "clone-impls"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
prettyplease = "0.1"
serde_json = "1.0"
tokio = { version = "1.25", features = ["full"] }