[package]
name = "competitive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
reqwest = { version = "0.11.10", features = ["blocking"] }
scraper = "0.13.0"
console = "0.15.0"
similar = "2.1.0"
test_bin = "0.4.0"